  in favor of POSIX:FNMATCH and POSIX:FNMATCH-MATCHER.
  See <http://clisp.org/impnotes/syscalls.html#wildcard> for details.

* Module REGEXP:

  + Function REGEXP:REGEXP-EXEC no longer accepts :BOOLEAN argument; use
    :RETURN-TYPE 'BOOLEAN instead.
    See <http://clisp.org/impnotes/regexp.html#re-regexp-exec> for details.

* Module RAWSOCK:

  + Function RAWSOCK:CONVERT-ADDRESS now returns byte vectors instead of
    integers.
    See <http://clisp.org/impnotes/rawsock.html#rawsock-convert-address>
    for details.

Improvements
............

* Mixing &OPTIONAL and &KEY in the same lambda list is a bad design
  and now triggers a STYLE-WARNING during compilation.
  See <http://clisp.org/impnotes/compilation.html#key-optional> for details.

* Redefinition warnings are now of type STYLE-WARNING.
  Some CLOS warnings are now of type STYLE-WARNING.
  See <http://clisp.org/impnotes/evaluation.html#suppress-check-redef>
  and <http://clisp.org/impnotes/mop-clisp.html#mop-clisp-warn>
  for details.

* FFI now converts REALs to FLOATs automatically as necessary.

New customizations
..................

* New user variable CUSTOM:*MODULE-PROVIDER-FUNCTIONS* allows user to
  influence behavior of REQUIRE.
  See <http://clisp.org/impnotes/require.html#module-providers> for details.

* The readline-based completion facility is now more customizable.
  See <http://clisp.org/impnotes/terminal.html#readline-extend> for details.

New features
............

* New declaration DYNAMICALLY-MODIFIABLE disables GF-ALREADY-CALLED-WARNING.
  See <http://clisp.org/impnotes/mop-clisp.html#mop-clisp-gf-dynamically-modifiable>
  for details.

* The new functions EXT:OPERATING-SYSTEM-TYPE and EXT:OPERATING-SYSTEM-VERSION
  return basic information about the underlying operating system.
  See <http://clisp.org/impnotes/os-env.html#os> for details.

* Function EXT:STREAM-HANDLES returns the OS file handles for the stream.